--- a/.classpath
+++ b/.classpath
@@ -16,7 +16,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/javafx.controls.jar">
+	<classpathentry kind="lib" path="lib/javafx.controls.jar" sourcepath="lib/src.zip">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
@@ -26,7 +26,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/javafx.graphics.jar">
+	<classpathentry kind="lib" path="lib/javafx.graphics.jar" sourcepath="lib/src.zip">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
